fix condition for touch devices

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<h2>Personal Favorites</h2>
 			<ul>
 				<li class="drums">
-					<a href="http://www.cbf.com.br">
+					<a href="http://www.youtube.com/phisoccer">
 						<strong>Drums</strong>
 						<hr/>
 						<small>Air + actual drummer.</small> 
@@ -151,21 +151,21 @@
 					</a>
 				</li>
 				<li class="chocolate">
-					<a href="http://www.cbf.com.br">
+					<a href="http://www.lindtusa.com">
 						<strong>Chocolate</strong>
 						<hr/>
 						<small>Enough said.</small>
 					</a>
 				</li>
 				<li class="philz-coffee">
-					<a href="http://www.evernote.com">
+					<a href="http://www.philzcoffee.com">
 						<strong>Philz Coffee</strong>
 						<hr/>
 						<small>Favorite coffee shop.</small>
 					</a>
 				</li>
 				<li class="maps">
-					<a href="http://www.textmate.com">
+					<a href="http://www.google.com/maps">
 						<strong>Maps</strong>
 						<hr/>
 						<small>They always fascinate me.</small>
@@ -186,7 +186,7 @@
 					</a>
 				</li>
 				<li class="terminal">
-					<a href="http://www.textmate.com">
+					<a href="http://en.wikipedia.org/wiki/Command-line_interface">
 						<strong>Terminal</strong>
 						<hr/>
 						<small>Agility and hacker feelings.</small>
@@ -200,7 +200,7 @@
 					</a>
 				</li>
 				<li class="axure">
-					<a href="http://www.textmate.com">
+					<a href="http://www.axure.com">
 						<strong>Axure</strong>
 						<hr/>
 						<small>For prototyping.</small>
