--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					Philipe <s>Tauk</s> Casarotte
 					<small>CTO &amp; Product Manager for <a href="http://www.dburnsdesign.com/about-us#our-team">DBurns</a>.</small>
 				</h1>
-				<!-- <p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p> -->
-				<p>I'm an experienced technology professional and programmer, focused on custom web development, but I can also handle the client side of things. I'm savvy in all aspects of agency business, including digital marketing and account management.</p>
+				<p>I have experience in web development, client relations and digital strategy. <strong>I'm a programmer.</strong></p>
+				<!-- <p>An experienced technology professional and programmer, focused on custom web development. Savvy in all aspects of agency business, including digital marketing and account management.</p> -->
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
 					<i class="fa fa-angle-down"></i>
@@ -39,11 +39,11 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big><strong>Bio:</strong> As a technology leader, I guide clients in all aspects of their web development project. I craft the initial strategy and scope. Then I manage the project as it rolls through development. I strategize end-to-end launch plans for my clients' products and services.</big></p>
+			<p class="intro"><big><strong>Bio:</strong> I guide clients in all aspects of their web development project, from the initial strategy and scope to the project management. I strategize end-to-end launch plans for my clients’ products and services.</big></p>
 			<div>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy leading teams and collaborating with people from all disciplines to make intensely creative, cutting-edge websites. My ability to deeply understand the technical aspects of web development as well as the business and marketing facets allows me to quickly connect with other team members and clients.</p>
 				<h3>Previous Experiences</h3>
-				<p>I've previously worked as an IT analyst at <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company. I was also a graphic designer and software engineer for one of Brazil's largest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a>, “the “Estadao”. There, I helped to develop an automation software which was later sold to top-tier Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Fundação Getulio Vargas do Rio de Janeiro</a>.</p>
+				<p>I've previously worked as an IT analyst at <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company. I was also a graphic designer and software engineer for one of Brazil's largest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a>, “the Estadão”. There, I helped to develop an automation software which was later sold to top-tier Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Fundação Getulio Vargas do Rio de Janeiro</a>.</p>
 				<h3>Education and Awards</h3>
 				<p>I've taught web design for two universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">Serviço Nacional de Aprendizagem Comercial</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">Faculdade Santa Marcelina</a>, and I'm honored that my work has won Webby and W3 awards. I hold a B.A. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">Pontifícia Universidade Católica de São Paulo</a>.</p>
 			</div>
@@ -55,7 +55,7 @@
 			<div>	
 				<h2>
 					I'm Currently<br/>
-					<a href="https://twitter.com/hashtag/workingonbeckmen">#workingonbeckmen</a>
+					<a href="https://twitter.com/hashtag/workingonbeckmen?vertical=default&f=tweets">#workingonbeckmen</a>
 				</h2>
 				<a href="http://www.beckmenvineyards.com"><img src="images/logos/beckmen-vineyards-logo.png" width="94" height="78" alt="Beckmen Vineyards"/></a>
 				<p>A complete rebranding of Beckmen Vineyards' website and wine club.</p>
@@ -165,7 +165,7 @@
 					</a>
 				</li>
 				<li class="maps">
-					<a href="http://www.google.com/maps">
+					<a href="https://www.google.com/maps/place/1431+7th+St,+Santa+Monica,+CA+90401/@34.0182075,-118.4912457,2487m/data=!3m1!1e3!4m2!3m1!1s0x80c2a4cdcf3ba38b:0x449304f6160de955">
 						<strong>Maps</strong>
 						<hr/>
 						<small>They always fascinate me.</small>
