--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</a>
 			</div>
 			<div class="col">
-				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
+				<img src="images/philipe-casarotte-smile.png" width="1480" height="1712" alt="Philipe Casarotte" class="profile-id"/>
 			</div>
 		</header>
 		<section id="bio">
@@ -49,7 +49,7 @@
 			</div>
 		</section>
 		<section id="recent-work">
-			<!-- TO-DO: Shut video in eagle angle, showing me typing away and doing some work, add full background cover so it fits the width/height of the parent div -->
+			<!-- TO-DO: Shut Photo in eagle angle, showing me typing away and doing some work, add full background cover so it fits the width/height of the parent div -->
 			<!-- TO-DO: Shut photos for each step of the project -->
 			<!-- TO-DO: Post Tweeter Images showing process -->
 			<div>	
