--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Philipe Casarotte — Creative Full Stack Programmer, Product and Project Manager</title>
+        <title>Philipe Casarotte — Creative Full Stack Programmer, Product Manager</title>
 		<meta name="description" content="Philipe is DBurns CTO &amp; Product Manager. He has experience in web development, client relations and digital strategy. He is a programmer."/>
 		<meta name="keywords" content="programmer, developer, product manager, digital professional, ruby, front-end"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
@@ -12,11 +12,11 @@
 		<link href="imgs/favicon.png" rel="icon" type="image/png" />
 		
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
-		<link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Open+Sans+Condensed:300,300italic,700|Yanone+Kaffeesatz:400,300,700|Amatic+SC:400,700" rel="stylesheet" type="text/css"/>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-		<link href="stylesheets/animate.css" rel="stylesheet" type="text/css"/>
+		<!-- <link href="stylesheets/animate.css" rel="stylesheet" type="text/css"/>
 		<link href="stylesheets/default.css" rel="stylesheet" type="text/css"/>
-		<link href="stylesheets/icons.css" rel="stylesheet" type="text/css"/>
+		<link href="stylesheets/icons.css" rel="stylesheet" type="text/css"/> -->
+		<link type="text/css" rel="stylesheet" href="/min/b=stylesheets&amp;f=animate.css,default.css,icons.css" />
     </head>
     <body>
 		<!-- Of course you gotta check out my semantics! -->
@@ -214,7 +214,7 @@
 				<a href="https://twitter.com/philipetauk" class="fa fa-twitter"></a>
 				<a href="https://github.com/philipecasarotte/" class="fa fa-github"></a>
 			</nav>
-			<a href="tel:13106171037">+1 (310) 617.1037</a>
+			<a href="tel:13106171037" class="phone">+1 (310) 617.1037</a>
 			<a href="mailto:philipe@casarotte.com?Subject=Hey Phil!(ipe)">philipe [at] casarotte [dot] com</a>
 			<address>Santa Monica, CA</address>
 		</footer>
@@ -231,7 +231,8 @@
 		<!-- Drummer & Coder, I may miss a comma, but never the beat. -->
 		 
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-		 <script src="javascripts/default.js" type="text/javascript"></script>
+		 <!--<script src="javascripts/default.js" type="text/javascript"></script>-->
+		 <script type="text/javascript" src="/min/f=javascripts/default.js"></script>
 		 
 		 <script type="text/javascript">
 			(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
