--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-		<link type="text/css" rel="stylesheet" href="/min/b=stylesheets&amp;f=animate.css,default.css,icons.css"/>
+		<link type="text/css" rel="stylesheet" href="/stylesheets/animate.css"/>
+	    	<link type="text/css" rel="stylesheet" href="/stylesheets/default.css"/>
+	    	<link type="text/css" rel="stylesheet" href="/stylesheets/icons.css"/>
 		
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
