--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		
 		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-		<link type="text/css" rel="stylesheet" href="/stylesheets/animate.css"/>
-	    	<link type="text/css" rel="stylesheet" href="/stylesheets/default.css"/>
-	    	<link type="text/css" rel="stylesheet" href="/stylesheets/icons.css"/>
+		<link type="text/css" rel="stylesheet" href="stylesheets/animate.css"/>
+	    	<link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
+	    	<link type="text/css" rel="stylesheet" href="stylesheets/icons.css"/>
 		
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -30,13 +30,13 @@
 		</script>
     </head>
     <body>
-		<div class="loader-canvas"><img src="/images/loader.png" alt="Loader" title="Loader" class="loader"/></div>
+		<div class="loader-canvas"><img src="images/loader.png" alt="Loader" title="Loader" class="loader"/></div>
 		<!-- Of course you gotta check my semantics! -->
 		<header id="intro" class="flexbox">
 			<div class="intro col">
 				<h1>
 					Philipe Casarotte
-					<small>Sr. Product Manager @ <a href="http://www.jukinmedia.com">Jukin Media</a></small>
+					<small>Sr. Product Manager @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
 				</h1>
 				<p>People, Processes, and Products. I believe you need to account for people first, your users, understand the job they are trying to do, processes and workflows, and then finally focus on solving their problem, the actual product.</p>
 				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="mobile-only"/>
