--- a/index.html
+++ b/index.html
@@ -243,6 +243,6 @@
 		
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script type="text/javascript" src="/min/f=javascripts/default.js"></script>
+		<script type="text/javascript" src="javascripts/default.js"></script>
 	</body>
 </html>
