--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Philipe Casarotte — Sr. Product Manager | People, Processes, and Product.</title>
-		<meta name="description" content="Philipe Casarotte | Sr. Product Manager @ Jukin Media. He is a software engineer, with experience in product management, client management, and digital strategy."/>
+		<meta name="description" content="Philipe Casarotte | Sr. Product Manager @ NBCUniversal. He is a software engineer, with experience in product management, client management, and digital strategy."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<meta name="google-site-verification" content="_Ao4wv72VkOYnYgvu27J2vGEUOhSnDTXPq56_x9LZiM"/>
