--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html ng-app>
     <head>
         <meta charset="utf-8"/>
-        <title>Philipe Casarotte — Sr. Product Manager | People, Processes, and Product.</title>
-		<meta name="description" content="Philipe Casarotte | Sr. Product Manager @ NBCUniversal. He is a software engineer, with experience in product management, client management, and digital strategy."/>
+        <title>Philipe Casarotte — Product Developement & Managememnt | People, Processes, and Product.</title>
+		<meta name="description" content="Philipe Casarotte | Sr. Manager, Product Development @ NBCUniversal. He is a software engineer, with experience in product management, client management, and digital strategy."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<meta name="google-site-verification" content="_Ao4wv72VkOYnYgvu27J2vGEUOhSnDTXPq56_x9LZiM"/>
-		<meta property="og:image" content="http://casarotte.com/images/philipe-casarotte-website.png?007"/>
+		<meta property="og:image" content="images/philipe-casarotte-website.png?007"/>
 		
 		<link rel="apple-touch-icon" href="images/favicon.png"/>
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -36,7 +36,7 @@
 			<div class="intro col">
 				<h1>
 					Philipe Casarotte
-					<small>Sr. Product Manager @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
+					<small>Sr. Manager, Product Development @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
 				</h1>
 				<p>People, Processes, and Products. I believe you need to account for people first, your users, understand the job they are trying to do, processes and workflows, and then finally focus on solving their problem, the actual product.</p>
 				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="mobile-only"/>
@@ -53,23 +53,23 @@
 		<section id="bio">
 			<p class="intro"><big><strong>Bio: </strong>I'm a product manager with hands-on experience in software development, client management, and digital strategy.</big></p>
 			<div>
-				<p>At Jukin we want to crack the code of videos and the reason why we all love watching them. At Jukin we want to crack the code of videos and the reason why we all love watching them. I work alongside stakeholders, and engineers in product improvements, user interviews, data analyses and modeling, and designing unique user experiences to our internal and externals audiences.</p>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
 				<h3>Previous Experiences</h3>
-				<p>At <a href="http://www.dburnsdesign.com">DBurns</a>, I guided clients in all aspects of their web development project from the initial strategy and scope to the project management. I strategized end-to-end launch plans for clients' products and services.</p>
+				<p>At <a href="https://www.jukinmedia.com">Jukin Media</a> we wanted to crack the code of videos and the reason why we all love watching them. I worked alongside stakeholders, and engineers in product improvements, user interviews, data analyses/modeling, and designing unique user experiences to our internal and externals audiences.</p>
+				<p>At <a href="https://www.dburnsdesign.com">DBurns</a>, I guided clients in all aspects of their web development project from the initial strategy to the project management. I strategized end-to-end launch plans for clients' products and services.</p>
 				<p>I've also previously worked as an IT analyst at <a href="http://en.wikipedia.org/wiki/Sumitomo_Corporation">Sumitomo Corporation</a>, a global Japanese trading company. I was also a graphic designer and software engineer for one of Brazil's largest newspapers, <a href="http://en.wikipedia.org/wiki/O_Estado_de_S._Paulo">O Estado de S. Paulo</a>, “the Estadão.” There, I helped to develop an automation software which was later sold to top-tier Brazilian universities such as <a href="http://en.wikipedia.org/wiki/FGV_Direito_Rio">Fundação Getulio Vargas do Rio de Janeiro</a>.</p>
 				<h3>Education and Awards</h3>
-				<p>I've taught web development for two universities, <a href="http://www.sp.senac.br/"  hreflang="pt-BR">Serviço Nacional de Aprendizagem Comercial</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">Faculdade Santa Marcelina</a>, and I'm honored that my work has won The Communicator, Davey, and W3 awards. I hold a B.S. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">Pontifícia Universidade Católica de São Paulo</a>.</p>
+				<p>I've taught web development for two universities, <a href="http://www.sp.senac.br/" hreflang="pt-BR">Serviço Nacional de Aprendizagem Comercial</a> and <a href="http://pt.wikipedia.org/wiki/Faculdade_Santa_Marcelina" alt="FASM-SP (pt-BR)" title="FASM-SP (pt-BR)" hreflang="pt-BR">Faculdade Santa Marcelina</a>, and I'm honored that my work has won The Communicator, Davey, and W3 awards. I hold a B.S. in Digital Media from <a href="http://en.wikipedia.org/wiki/Pontif%C3%ADcia_Universidade_Cat%C3%B3lica_de_S%C3%A3o_Paulo">Pontifícia Universidade Católica de São Paulo</a>.</p>
 			</div>
 		</section>
 		<section id="recent-work">
 			<div>	
 				<h2>
-					I'm Currently<br/>
-					<a href="https://www.jukinmedia.com">#workingatjukinmedia</a>
+					I'm Currently<br>
+					<a href="https://www.nbcuniversal.com">#workingatnbcuniversal</a>
 				</h2>
-				<a href="https://www.jukinmedia.com"><img src="images/logos/jukinmedia-logo.png" width="94" height="78" alt="Jukin Media"/></a>
-				<p>Jukin Media - The future of story telling is user generated.</p>
+				<a href="https://www.nbcuniversal.com"><img src="images/logos/nbcuniversal-logo.png" width="94" height="78" alt="NBC Universal"></a>
+				<p>NBC Universal Media LLC - One of the world’s leading media and entertainment companies.</p>
 			</div>
 		</section>
 		<section id="work">
@@ -227,7 +227,7 @@
 			</nav>
 			<a href="tel:13106171037" class="phone">+1 (310) 617.1037</a>
 			<a href="mailto:philipe@casarotte.com?Subject=Hi Philipe">philipe [at] casarotte [dot] com</a>
-			<address>Santa Monica, CA</address>
+			<address>Glendale, CA</address>
 		</footer>
 		
 		<nav class="breadcrumb">
