remove preferred tools

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html ng-app>
     <head>
+	<!-- Coder & Drummer: I may miss a comma, never the beat. -->    
         <meta charset="utf-8"/>
-        <title>Philipe Casarotte — Product Developement & Managememnt</title>
+        <title>Philipe Casarotte — Product Development & Managememnt</title>
 		<meta name="description" content="Philipe Casarotte | Sr. Manager, Product Development @ NBCUniversal. He is a software engineer, with experience in product management, client management, and digital strategy."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -182,41 +183,6 @@
 						<small>They fascinate me.</small>
 					</a>
 				</li>
-				<li class="evernote">
-					<a href="http://www.evernote.com">
-						<strong>Evernote</strong>
-						<hr/>
-						<small>My every note.</small>
-					</a>
-				</li>
-				<li class="basecamp">
-					<a href="https://www.atlassian.com/software/jira">
-						<strong>JIRA</strong>
-						<hr/>
-						<small>For a productive day.</small>
-					</a>
-				</li>
-				<li class="terminal">
-					<a href="http://en.wikipedia.org/wiki/Command-line_interface">
-						<strong>CI</strong>
-						<hr/>
-						<small>Command Line #ftw</small>
-					</a>
-				</li>
-				<li class="textmate">
-					<a href="https://macromates.com">
-						<strong>Textmate</strong>
-						<hr/>
-						<small>Best of friends TE.</small>
-					</a>
-				</li>
-				<li class="axure">
-					<a href="http://www.axure.com">
-						<strong>Axure</strong>
-						<hr/>
-						<small>For prototyping.</small>
-					</a>
-				</li>
 			</ul>
 		</section>
 		<footer>
@@ -238,9 +204,6 @@
 			<a href="#stats" rel="#stats"><span>Experience</span></a>
 			<a href="#personal" rel="#personal"><span>Preferences</span></a>
 		</nav>
-		
-		<!-- Coder & Drummer: I may miss a comma, never the beat. -->
-		
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/default.js"></script>
