--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Coder & Drummer: I may miss a comma, never the beat. -->    
         <meta charset="utf-8"/>
         <title>Philipe Casarotte — Product Development & Managememnt</title>
-		<meta name="description" content="Philipe Casarotte | Sr. Manager, Product Development @ NBCUniversal. He is a software engineer, with experience in product management, client management, and digital strategy."/>
+		<meta name="description" content="Philipe Casarotte | Sr. Manager, Product Development @ NBCUniversal. Product, UX, eCommerce, Strategy, Engineering, and PMO Operations."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<meta name="google-site-verification" content="_Ao4wv72VkOYnYgvu27J2vGEUOhSnDTXPq56_x9LZiM"/>
@@ -41,7 +41,6 @@
 				</h1>
 				<p>I thrive in an environment where I can define product strategy, establish roadmaps, and build teams that deliver successful products.</p>
 				<p>People, Processes, and Products. I believe you need to account for people first, your users, understand the job they are trying to do, processes and workflows, and then finally focus on solving their problem, the actual product.</p>
-				<p>Product, UX, eCommerce, Strategy, Engineering, and PMO Operations</p>
 				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="mobile-only"/>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
@@ -54,9 +53,9 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big><strong>Bio: </strong>I'm a product manager with hands-on experience in software development, client management, and digital strategy.</big></p>
+			<p><big><strong>Bio: </strong>I'm a product manager with hands-on experience in software development, client management, and digital strategy.</big></p>
+			<p class="intro">Currently, I am one of the Product and Engineering leads and at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver optimal experiences to our content's viewers. I am honored to be nominated as one of the eight "managers to watch" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment for the broader organization.</p>
 			<div>
-				<p>Currently, I am one of the Product and Engineering leads and at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver optimal experiences to our content's viewers. I am honored to be nominated as one of the eight "managers to watch" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment for the broader organization.</p>
 				<h3>Previous Experiences</h3>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
 				<p>Previous responsibilities include product strategy and launch of a viral video eCommerce platform with JukinMedia.com, as well as oversight of PMO Operations. I also lead product strategy at DBurns for a variety of different clients and industries, including Health & Fitness (FightDiet.com), Food & Beverage (Beckmen Vineyards), Fashion & Design (Anine Bing and Bijan) amongst others.</p>				
