--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p><big><strong>Bio: </strong>I'm a product manager with hands-on experience in software development, client management, and digital strategy.</big></p>
-			<p class="intro">Currently, I am one of the Product and Engineering leads and at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver optimal experiences to our content's viewers. I am honored to be nominated as one of the eight "managers to watch" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment for the broader organization.</p>
+			<p class="intro"><big>Currently, I am one of the Product and Engineering leads and at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver optimal experiences to our content's viewers. I am honored to be nominated as one of the eight "managers to watch" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment for the broader organization.</big></p>
 			<div>
 				<h3>Previous Experiences</h3>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
