--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big>Currently, I am one of the Product and Engineering leads and at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers. I am honored to be nominated as one of eight "managers worth watching" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment across the broader organization.</big></p>
+			<p class="intro"><big>Currently, I am one of the Product and Engineering leads at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers. I am honored to be nominated as one of eight "managers worth watching" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment across the broader organization.</big></p>
 			<div>
 				<h3>Previous Experiences</h3>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
