--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</nav>
 			<a href="tel:13106171037" class="phone">+1 (310) 617.1037</a>
 			<a href="mailto:philipe@casarotte.com?Subject=Hi Philipe">philipe [at] casarotte [dot] com</a>
-			<address>Glendale, CA</address>
+			<address>Austin, TX</address>
 		</footer>
 		
 		<nav class="breadcrumb">
