Promotion, title update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Coder & Drummer: I may miss a comma, never the beat. -->    
         <meta charset="utf-8"/>
         <title>Philipe Casarotte — Product Development & Managememnt</title>
-		<meta name="description" content="Philipe Casarotte | Sr. Manager, Product Development @ NBCUniversal. Product, UX, eCommerce, Strategy, Engineering, and PMO Operations."/>
+		<meta name="description" content="Philipe Casarotte | Director, Product Development @ NBCUniversal. Product, Video, Ads, UX, eCommerce, Strategy, Engineering, and PMO Operations."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<meta name="google-site-verification" content="_Ao4wv72VkOYnYgvu27J2vGEUOhSnDTXPq56_x9LZiM"/>
@@ -37,7 +37,7 @@
 			<div class="intro col">
 				<h1>
 					Philipe Casarotte
-					<small>Sr. Manager, Product Development @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
+					<small>Director, Product Development @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
 				</h1>
 				<p>I thrive in an environment where I can define product strategy, establish roadmaps, and build teams that deliver successful products.</p>
 				<p>People, Processes, and Products. I believe you need to account for people first, your users, understand the job they are trying to do, processes and workflows, and then finally focus on solving their problem, the actual product.</p>
@@ -53,7 +53,7 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big>Currently, I am one of the Product and Engineering leads at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers. I am honored to be nominated as one of eight "managers worth watching" across the company that will take part in the next CONNECT leadership career path at NBCUniversal. CONNECT is a program that brings together managers from multiple divisions for synergy and strategic alignment across the broader organization.</big></p>
+			<p class="intro"><big>Currently, I am one of the Product and Engineering leads at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers.</big></p>
 			<div>
 				<h3>Previous Experiences</h3>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
