Fix description, title/promotion

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 		</header>
 		<section id="bio">
-			<p class="intro"><big>Currently, I am one of the Product and Engineering leads at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers.</big></p>
+			<p class="intro"><big>Currently, I am a Product Director at NBCUniversal, within the Digital Content Distribution division. Our team partners with internal and external stakeholders, such as Xfinity, Spectrum, AT&T, YoutubeTV, and Hulu, to deliver top-grade experiences to our viewers.</big></p>
 			<div>
 				<h3>Previous Experiences</h3>
 				<p>My diverse background includes roles in client relations, project management, front- and back-end development, UX/UI and digital strategy. I enjoy collaborating with people from all disciplines to produce creative digital products.</p>
