--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	<!-- Coder & Drummer: I may miss a comma, never the beat. -->    
         <meta charset="utf-8"/>
-        <title>Philipe Casarotte — Product Development & Managememnt</title>
+        <title>Philipe Casarotte — Product Strategy | UX | Video | Engineering and PMO Operations | MBA</title>
 		<meta name="description" content="Philipe Casarotte | Director, Product Development @ NBCUniversal. Product, Video, Ads, UX, eCommerce, Strategy, Engineering, and PMO Operations."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -40,7 +40,7 @@
 					<small>Director, Product Development @ <a href="http://www.nbcuniversal.com">NBCUniversal</a></small>
 				</h1>
 				<p>I thrive in an environment where I can define product strategy, establish roadmaps, and build teams that deliver successful products.</p>
-				<p>People, Processes, and Products. I believe you need to account for people first, your users, understand the job they are trying to do, processes and workflows, and then finally focus on solving their problem, the actual product.</p>
+				<p>Product Strategy | UX | Video | Engineering and PMO Operations | MBA</p>
 				<img src="images/philipe-casarotte.png" width="1480" height="1712" alt="Philipe Casarotte" class="mobile-only"/>
 				<button rel="#bio">FULL BIO &raquo;</button>
 				<a href="#bio" class="animated infinite bounce" rel="#bio">
