--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<link rel="apple-touch-icon" href="images/favicon.png"/>
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 		
-		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+		<link href="//fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		<link type="text/css" rel="stylesheet" href="stylesheets/animate.css"/>
 	    	<link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
 	    	<link type="text/css" rel="stylesheet" href="stylesheets/icons.css"/>
