--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 		
 		<link href="//fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css"/>
-	    	<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
+	    	<link href="//fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		<link type="text/css" rel="stylesheet" href="stylesheets/animate.css"/>
 	    	<link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
